# parallel-computing

./: README.md
OpenMP/: CMakeLists.txt  mat_vec_mult.cpp  odd_even.cpp  trap.cpp
OpenMP+MPI/: CMakeLists.txt  a.out  hybird_pi.c  hybrid_matrix_multiply.c  hybrid_matrix_multiply.cpp  main.cpp  matrix_multipy.c  odd_even_sort.c  omp_mpi_mm.cpp  trapezoidal_integral.cpp
OpenMP+MPI/bak/: matrix_multiply.cpp  odd_even_trans_sort.cpp  version.cpp
OpenMP+MPI/data/: mdata  vdata  vdata.imp
OpenMPI/: CMakeLists.txt  matrix_multiply.cpp  trapezoidal_integral.cpp
Sequential/: omp_hello.cpp
